logs/dag_id=test_dag_tutorial/run_id=scheduled__2023-01-19T000000+0000/task_id=create_postgres_table/attempt=1.log
[2023-11-02T11:26:37.708+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-19T00:00:00+00:00 [queued]>
[2023-11-02T11:26:37.768+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-19T00:00:00+00:00 [queued]>
[2023-11-02T11:26:37.773+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:26:37.777+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T11:26:37.786+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:26:37.936+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-01-19 00:00:00+00:00
[2023-11-02T11:26:37.948+0000] {standard_task_runner.py:55} INFO - Started process 3484 to run task
[2023-11-02T11:26:37.961+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_dag_tutorial', 'create_postgres_table', 'scheduled__2023-01-19T00:00:00+00:00', '--job-id', '558', '--raw', '--subdir', 'DAGS_FOLDER/test_dag_tutorial.py', '--cfg-path', '/tmp/tmp3pbnqtdo']
[2023-11-02T11:26:37.962+0000] {standard_task_runner.py:83} INFO - Job 558: Subtask create_postgres_table
[2023-11-02T11:26:38.810+0000] {task_command.py:376} INFO - Running <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-19T00:00:00+00:00 [running]> on host 1dfdc0df4852
[2023-11-02T11:26:39.706+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=tetiana
AIRFLOW_CTX_DAG_ID=test_dag_tutorial
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-01-19T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-01-19T00:00:00+00:00
[2023-11-02T11:26:39.821+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-02T11:26:39.876+0000] {sql.py:315} INFO - Running statement: 
        create table if not exists people (
        Index primary key,
        User_ID TEXT NOT NULL,
        Last_Name TEXT NOT NULL,
        Sex TEXT NOT NULL,
        Email TEXT NOT NULL,
        Phone TEXT NOT NULL,
        Date_of_birth date NOT NULL
        Job_Title  TEXT NOT NULL
        

        )
        , parameters: None
[2023-11-02T11:26:39.879+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^

[2023-11-02T11:26:39.953+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=test_dag_tutorial, task_id=create_postgres_table, execution_date=20230119T000000, start_date=20231102T112637, end_date=20231102T112639
[2023-11-02T11:26:39.995+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 558 for task create_postgres_table (syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^
; 3484)
[2023-11-02T11:26:40.033+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-02T11:26:40.090+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
